--- a/index.html
+++ b/index.html
@@ -24,41 +24,32 @@
     button:hover {
       background-color: #3367d6;
     }
+    #microValue {
+      position: absolute;
+      left: -9999px;
+    }
   </style>
 </head>
 <body>
+  <input id="microValue" value="µ" readonly>
   <button onclick="copyMicro()">Copy µ</button>
 
   <script>
     function copyMicro() {
-      const text = "µ";
+      var input = document.getElementById("microValue");
+      input.focus();
+      input.select();
 
-      // Try modern clipboard API first
-      if (navigator.clipboard && navigator.clipboard.writeText) {
-        navigator.clipboard.writeText(text).then(function () {
-          alert("Copied: µ");
-        }).catch(function () {
-          fallbackCopy(text);
-        });
-      } else {
-        fallbackCopy(text);
-      }
-    }
-
-    function fallbackCopy(text) {
-      const temp = document.createElement("textarea");
-      temp.value = text;
-      document.body.appendChild(temp);
-      temp.style.position = "fixed";
-      temp.style.left = "-9999px";
-      temp.select();
       try {
-        document.execCommand("copy");
-        alert("Copied: µ");
+        var success = document.execCommand("copy");
+        if (success) {
+          alert("Copied: µ");
+        } else {
+          alert("Could not copy. Please select and copy manually: µ");
+        }
       } catch (e) {
-        alert("Could not copy. Please select and copy manually: " + text);
+        alert("Could not copy. Please select and copy manually: µ");
       }
-      document.body.removeChild(temp);
     }
   </script>
 </body>
